# sports_tv_guide

./: .gitignore  CLAUDE.md  README.md  config.py  main.py  package-lock.json  pyproject.toml
.claude/rules/: code-style.md
api/: __init__.py  brackets.py  game.py  golf.py  rankings.py  schedule.py  scoreboard.py  standings.py
constants/: espn.py
schemas/: api-contract.json  bracket.py  codes.py  game.py
scripts/: generate_types.py
services/: bracket_service.py  game_espn_service.py  golf_service.py  rankings_service.py  scoreboard_espn_service.py  standings_service.py
sports-tv-guide-app/: .gitignore  DEVELOPMENT.md  README.md  TODO.md  app.config.js  app.json  babel.config.js  eslint.config.mjs  index.tsx  package-lock.json  package.json  prettier.config.js  tsconfig.json
sports-tv-guide-app/src/: App.tsx
sports-tv-guide-app/src/components/: BoxScoreModal.tsx  BracketView.tsx  EmptyState.tsx  GameCard.tsx  InProgressTodaySection.tsx  SportTabs.tsx  TVGuideGrid.tsx
sports-tv-guide-app/src/constants/: index.ts
sports-tv-guide-app/src/screens/: BracketScreen.tsx  FavoritesScreen.tsx  HomeScreen.tsx  NotificationsScreen.tsx  ProfileScreen.tsx  SearchScreen.tsx  StandingsScreen.tsx
sports-tv-guide-app/src/services/: api.ts
tests/: conftest.py  test_api_contract.py  test_auto_discovery.py  test_bracket_formatting.py  test_endpoints.py  test_game_formatting.py  test_models.py  test_schemas.py  test_scoreboard_formatting.py  test_standings_formatting.py
tests/fixtures/: espn_data.py  ncaa_bracket_data.py
utils/: cache.py  client.py
(+7 files in other folders)
